fixed spacing on line 78

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ h1 {
   background-color: #b58900;
 }
 
-.dfn +strong second-child {
+.dfn + strong second-child {
   color: #fff;
 }
 
@@ -74,6 +74,7 @@ strong:nth-child(even) {
 .types li:nth-child(3n) {
   background-color: #d04b16;
 }
-li mark {
+
+li > mark {
   background-color: #719e07;
 }
